pref: 增加课程指派 / 动态权限 / 参数校验

--- a/oes-core/pom.xml
+++ b/oes-core/pom.xml
@@ -56,7 +56,7 @@
     <!-- beetl -->
     <dependency>
       <groupId>com.ibeetl</groupId>
-      <artifactId>beetl</artifactId>
+      <artifactId>beetl-framework-starter</artifactId>
     </dependency>
     <!-- webjars START -->
     <!-- AdminLTE -->
