--- a/oes-common/pom.xml
+++ b/oes-common/pom.xml
@@ -21,6 +21,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <!-- spring-boot-starter-validation -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
     <!-- MySql Driver -->
     <dependency>
       <groupId>mysql</groupId>
