--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.6.RELEASE</version>
+    <version>2.3.0.RELEASE</version>
     <relativePath/>
   </parent>
 
@@ -31,7 +31,7 @@
   <!-- 相关依赖统一版本管理 -->
   <properties>
     <java.version>1.8</java.version>
-    <hutool.version>5.3.2</hutool.version>
+    <hutool.version>5.3.5</hutool.version>
     <mybatis-plus.version>3.3.1</mybatis-plus.version>
     <guava.version>29.0-jre</guava.version>
     <commons-text.version>1.8</commons-text.version>
@@ -40,8 +40,8 @@
     <webjars-bootstrap.version>4.4.1-1</webjars-bootstrap.version>
     <webjars-bootstrap-table.version>1.16.0</webjars-bootstrap-table.version>
     <poi-ooxml.version>4.1.2</poi-ooxml.version>
-    <beetl.version>3.1.3.RELEASE</beetl.version>
-    <spring-admin.version>2.2.2</spring-admin.version>
+    <beetl.version>1.2.30.RELEASE</beetl.version>
+    <spring-admin.version>2.2.3</spring-admin.version>
     <logstash-logback-encoder.version>6.3</logstash-logback-encoder.version>
   </properties>
 
@@ -78,7 +78,7 @@
       <!-- beetl template -->
       <dependency>
         <groupId>com.ibeetl</groupId>
-        <artifactId>beetl</artifactId>
+        <artifactId>beetl-framework-starter</artifactId>
         <version>${beetl.version}</version>
       </dependency>
       <!-- MyBatis Plus -->
