--- a/oes-util/pom.xml
+++ b/oes-util/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>oes</artifactId>
     <groupId>com.chachae.exam</groupId>
     <version>1.0</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -46,19 +47,19 @@
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>easyexcel</artifactId>
-      <version>2.2.3</version>
+      <version>${easyExcel.version}</version>
     </dependency>
     <!-- xmlbeans -->
     <dependency>
       <groupId>org.apache.xmlbeans</groupId>
       <artifactId>xmlbeans</artifactId>
-      <version>3.1.0</version>
+      <version>${xmlbeans.version}</version>
     </dependency>
     <!-- dom4j -->
     <dependency>
       <groupId>org.dom4j</groupId>
       <artifactId>dom4j</artifactId>
-      <version>2.1.3</version>
+      <version>${dom4j.version}</version>
     </dependency>
     <!-- poi-ooxml-schemas -->
     <dependency>
