--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,9 @@
     <beetl.version>1.2.30.RELEASE</beetl.version>
     <spring-admin.version>2.2.3</spring-admin.version>
     <logstash-logback-encoder.version>6.3</logstash-logback-encoder.version>
+    <easyExcel.version>2.2.3</easyExcel.version>
+    <xmlbeans.version>3.1.0</xmlbeans.version>
+    <dom4j.version>2.1.3</dom4j.version>
   </properties>
 
   <!-- 依赖版本管理 -->
